# kerb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  lefthook.yml
.github/actions/generate-release-notes/: action.yml
.github/workflows/: ci.yml  publish.yml
benches/: telemetry_benches.rs
docs/: ACE_SharedFileOut_Documentation_v1.md
examples/: Cargo.toml
examples/examples/: facade_ac.rs  facade_ac_evo.rs  facade_iracing.rs  facade_lmu.rs  session_diagnostics.rs
examples/src/: lib.rs
kerb-derive/: Cargo.toml
kerb-derive/src/: lib.rs
src/: connection.rs  error.rs  lib.rs  serializer.rs  shm.rs  sim_string.rs  types.rs  utils.rs
src/ac/: connection.rs  mod.rs  snapshot.rs  structs.rs  types.rs
src/ac_evo/: connection.rs  mod.rs  snapshot.rs  structs.rs  types.rs
src/iracing/: connection.rs  mod.rs  session.rs  structs.rs  types.rs  vars.rs
src/lmu/: connection.rs  mod.rs  snapshot.rs  structs.rs  types.rs
tests/: error_tests.rs  struct_size_tests.rs  types_tests.rs  utils_tests.rs
tools/codegen/: Cargo.toml  README.md
tools/codegen/src/: lib.rs  main.rs
tools/codegen/tests/: codegen_tests.rs
tools/iracing_type_gen/: Cargo.toml  README.md
tools/iracing_type_gen/src/: lib.rs  main.rs
tools/iracing_type_gen/tests/: codegen_tests.rs
