[package]
name = "kerb"
version = "0.1.1"
edition = "2024"
description = "Real-time telemetry from racing simulators — iRacing, AC Evo, Le Mans Ultimate"
repository = "https://github.com/mvoof/kerb"
license = "MIT"
keywords = ["iracing", "telemetry", "sim-racing", "assetto-corsa-evo", "lmu"]
homepage = "https://github.com/mvoof/kerb"

categories = ["game-development"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
all-features = true

[features]
default = ["iracing", "ac-evo", "lmu"]
iracing = ["dep:windows-sys", "dep:serde_yaml"]
ac-evo = ["dep:windows-sys"]
lmu = ["dep:windows-sys"]

[dependencies]
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9", optional = true }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
], optional = true }

[workspace]
members = [
    "tools/iracing_type_gen",
    "examples",
]
resolver = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "telemetry_benches"
harness = false

